--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,5 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-      - configure_infrastructure:
-          requires: [create_infrastructure]
+      # - configure_infrastructure:
+      #     requires: [create_infrastructure]
