--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            ansible-playbook -i inventory main.yml -y
+            echo yes | ansible-playbook -i inventory main.yml
 
 workflows:
   myWorkflow:
