--- a/main.yml
+++ b/main.yml
@@ -1,8 +1,8 @@
 - name: Exercise for setting up a web server in an EC 
-  hosts: all
+  hosts: 3.85.159.180
   user: ubuntu
   become: true
   become_method: sudo
-  #become_user: root
+  become_user: root
   roles:
     - setup
