--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,5 @@
 - name: Exercise for setting up a web server in an EC 
-  hosts: 3.85.159.180
+  hosts: all
   user: ubuntu
   become: true
   become_method: sudo
