--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
   configure_infrastructure: 
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:latest
     steps:
       - checkout
       - add_ssh_keys:
@@ -31,7 +31,7 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            apk add --update ansible
+            apt-get install ansible
       - run:
           name: Run Playbook and Configure server
           command: |
