--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            apt-get install ansible
+            pip install --user ansible
       - run:
           name: Run Playbook and Configure server
           command: |
