--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,9 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            pip install --user ansible
+            pip install --user ansible \
+            pip install --upgrade --user ansible \
+            ansible --version
       - run:
           name: Run Playbook and Configure server
           command: |
