--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,7 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            pip install --user ansible \
-            pip install --upgrade --user ansible \
-            ansible --version
+            apt install ansible -y
       - run:
           name: Run Playbook and Configure server
           command: |
