--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
       - run:
           name: Install Ansible
           command: |
-            apt-get update \
-            apt-get dist-upgrade -y \
+            apt-get update && \
+            apt-get dist-upgrade -y && \
             apt install ansible -y
       - run:
           name: Run Playbook and Configure server
