--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -8,7 +8,7 @@
   # apt:
   #   upgrade: yes
   shell: |
-    apt upgrade -y
+    apt-get upgrade -y
 
 - name: remove dependencies that are no longer required
   become: yes
