--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -3,21 +3,15 @@
   apt:
     update_cache: yes
 
-# - name: upgrade apt packages
-#   become: yes
-#   apt:
-#     upgrade: yes
+- name: upgrade apt packages
+  become: yes
+  apt:
+    upgrade: yes
 
-
-# - name: correct apt packages
-#   become: yes
-#   shell: |
-#     sudo dpkg --configure -a
-
-# - name: remove dependencies that are no longer required
-#   become: yes
-#   apt:
-#     autoremove: yes
+- name: remove dependencies that are no longer required
+  become: yes
+  apt:
+    autoremove: yes
 
 - name: install node
   become: yes
