--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:5} \
           --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:5}"
     # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
-    - run: aws s3 cp index.html s3://mybucket-${CIRCLE_WORKFLOW_ID:0:5}/index.html --delete
+    - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:5} --delete
 
   get_last_deployment_id:
     docker:
